GNOME Bugzilla – Bug 759235
g_hash_table_resize(): epiphany killed by SIGABRT
Last modified: 2016-03-01 20:52:44 UTC
Crash in the snapshot service Version-Release number of selected component: epiphany-runtime-3.16.2-2.fc22 Additional info: reporter: libreport-2.6.0 backtrace_rating: 4 cmdline: epiphany crash_function: g_hash_table_resize executable: /usr/bin/epiphany global_pid: 4520 kernel: 4.0.6-300.fc22.x86_64 runlevel: N 5 type: CCpp uid: 1000 Truncated backtrace: Thread no. 1 (7 frames) #7 g_hash_table_resize at ghash.c:616 #8 g_hash_table_maybe_resize at ghash.c:645 #9 g_hash_table_insert_node at ghash.c:978 #10 g_hash_table_insert_internal at ghash.c:1228 #11 save_snapshot_thread at ephy-snapshot-service.c:634 #12 g_task_thread_pool_thread at gtask.c:1231 #14 g_thread_proxy at gthread.c:764 See the downstream bug in the See Also field for a full backtrace.
Created attachment 317015 [details] [review] snapshot-service: do not update cache table from other threads GLib hash tables are not thread-safe. Use a idle function to update the cache from the main thread.
Review of attachment 317015 [details] [review]: Also to gnome-3-18 ::: lib/ephy-snapshot-service.c @@ +404,3 @@ GdkPixbuf *snapshot; GError *error = NULL; + CacheData* cache_data; CacheData *cache_data; @@ +644,3 @@ { char *path; + CacheData* cache_data; Ditto @@ +712,3 @@ { char *path; + CacheData* cache_data; Ditto
Attachment 317015 [details] pushed as c988578 - snapshot-service: do not update cache table from other threads
*** Bug 759234 has been marked as a duplicate of this bug. ***