snapshot-service: do not update cache table from other threads

GLib hash tables are not thread-safe. Use a idle function to
update the cache from the main thread.

https://bugzilla.gnome.org/show_bug.cgi?id=759235